2006-01-14 Robin Cook <rcook@wyrms.net>
	* PRE_BUILD: do sedit on configure to set gui as the configure seems
	  to be broken processing some configure options
	* BUILD: added missing $OPTS

2005-12-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: pass --with-extraincdir=/usr/include/ffmpeg for cvs mplayer

2005-12-05 Robin Cook <rcook@wyrms.net>
	* DEPENDS: changed libungif to LIBGIF
	  added optional twolame for cvs

2005-12-02 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: added cross-grimoire dependency info (z-rejected) to
	  win32codecs, quicktime-codecs, real-codecs and xanim-codecs

2005-11-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* shared-ffmpeg.patch: updated so it applies to the latest cvs again

2005-11-10 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: added optional_depends on libmpcdec to the cvs version

2005-09-29 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PREPARE, CONFIGURE: use values of the old variables as defaults for
	  the new ones so user choices don't get lost

2005-09-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PREPARE, DETAILS: updated to multi-version standard
	* CONFIGURE, DEPENDS: prefix variables with MPLAYER, support choice
	  between gtk+ and gtk+2 for the gui in the cvs version
	* BUILD: use new variables, removed gcc 3.3 mp3lib hack, changed
	  confdir to use $TRACK_ROOT instead of $INSTALL_ROOT
	* FINAL: removed the dispel MPlayer-gui hack
	* DEPENDS, DETAILS: only use gcc 3.4 for release version, not cvs
	* DEPENDS: changed configure options for libvorbis
	* BUILD, PRE_BUILD: moved patching to PRE_BUILD

2005-09-02 Flavien Bridault <disk@sourcemage.org>
	* DETAILS: Corrected SOURCE_URL[0], added two more

2005-08-27 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 1.0pre7try2

2005-06-03 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: only apply mplayer-headers.patch to non cvs version

2005-05-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: add --cc=gcc to OPTS, otherwise cvs mplayer tries to compile